# rendering

./: .gitignore  CMakeLists.txt  README.md  image.ppm
rasterize/: CMakeLists.txt  RUN.md  image.ppm  run
rasterize/cube-texture-blender/: untitled.mtl
rasterize/objects/plant/: indoor_plant_02.mtl
rasterize/src/: bitmap.h  camera.h  color.h  main.cpp  renderer.cpp  renderer.h  window.cpp
rasterize/src/geo/: coord.h  obj3.cpp  obj3.h  triangle.h  vertex.h
rasterize/src/util/: Texture.cpp  Texture.h  interval.h  mathutil.h  rasterize.h  stb_image.h  tiny_obj_loader.cpp  util.h
raytrace/src/: camera.h  main.cpp  main.h  material.h  ray.h  scene.h  sphere.h  vec3.h
src/: camera.h  color.h  main.cpp  material.h  obj3.h  scene.h  sphere.h  util.h  vec3.h
